--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "aws-amplify": "^6.0.9",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^0.5.4",
